home/static/css/main.css
/* ... */
.schedule-item.schedule-lecture {
  width: 500px;
  background-color: #fcfcfc;
  position: relative;
}
.schedule-item.schedule-lecture + .schedule-lecture {
  margin-left: 200px;
}

.schedule-item.schedule-break {
  width: 300px;
  height: 70px;
}

.schedule-item-row {
  display: flex;
  justify-content: center;
  padding: 10px;
}
@media screen and (max-width: 900px) {
  .schedule-item-row {
    flex-wrap: wrap;
  }
  .schedule-item.schedule-lecture + .schedule-lecture {
    margin-left: 0;
    margin-top: 20px;
  }
}

.schedule-item__hall {
  height: 100%;
  width: 35px;
  background-color: #ff9900;
  color: white;
  font-weight: bold;
  text-align: center;
  vertical-align: middle;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

.schedule-item__hall div {
  writing-mode: vertical-lr;
  text-orientation: sideways;
  margin-left: 6px;
  height: 80px;
  transform: rotate(180deg);
}

.schedule-item__image {
  display: flex;
  flex-wrap: wrap;
  max-width: 160px;
  justify-content: center;
  align-items: center;
  margin-left: 20px;
}

.schedule-item__image img {
  width: 60px;
}

.schedule-lecture .schedule-item__image img {
  margin: 10px;
}

.schedule-item__image img + img {
  margin-left: 20px;
}

.schedule-item__text {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  font-size: 20px;
  margin: 0 20px;
  flex:1;
}

.schedile-item__text__time {
  font-size: 16px;
  margin-bottom: -5px;
  margin-top: 6px;
}

.schedule-item__text__label {
  font-weight: bold;
  font-size: 20px;
  text-align: center;
  padding-bottom: 4px;
}

.schedule-item__speaker {
  font-size: 16px;
}

.schedule-item.schedule.event .schedule-item__text__label {
  font-size: 24px;
}

.schedule-item__speaker span:after {
  content: ", ";
}

.schedule-item__speaker span:last-child:after {
  content: "";
}

.schedule-item__text__description {
  font-size: 14px;
}

.schedule-item__more {
  position: absolute;
  right: 5px;
  bottom: 5px;
  cursor: pointer;
}

.schedule-item__more img {
  width: 30px;
}

.schedule-item-modal-wrapper {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  display: none;
  z-index: 100;
}

.schedule-item-modal-wrapper.active {
  display: flex;
  justify-content: center;
  align-items: center;
}

.schedule-item-modal {
  width: 600px;
  padding: 20px;
  background-color: black;
  color: white;
  max-height: 100%;
  max-width: 100%;
  overflow-y: auto;
  margin-top: 100px;
}

.schedule-item-modal .close-button {
  font-size: 28px;
  width: 40px;
  height: 40px;
  margin-left: auto;
  border-radius: 50%;
  cursor: pointer;
  text-align: center;
}
.schedule-item-modal .close-button:hover {
  background-color: rgba(255, 255, 255, 0.5);
}

.schedule-item-modal .speakers-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
}

.schedule-item-modal .speakers-container img {
  height: 200px;
  margin: 10px;
}

.schedule-item .sign-up-button-container {
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
}

.schedule-item .sign-up-button {
  background-color: #ff9900;
  border-radius: 10px;
  height: 40px;
  padding: 0 20px;
  display: flex;
  align-items: center;
  color: white;
}

.schedule-item .sign-up-button:hover {
  background-color: #ff9900aa;
}

